fixed image overflow

--- a/portfolio/src/App.scss
+++ b/portfolio/src/App.scss
@@ -55,6 +55,7 @@ button:hover{
     width:46%;
     background: #363e3f;
     margin-bottom: 50px;
+    overflow: hidden;
     img{
       border-bottom: 2px solid #282c34;
       width: 100%;
